# multi-vehicle-avp

./: EXECUTION_GUIDE.md  QUICK_COMMANDS.md  README.md  README_copy.md  mkdocs.yaml
.github/workflows/: mkdocs.yml
docs/: index.md
docs/About/Acknowledgements/: index.md
docs/About/License/: index.md
docs/DeveloperGuide/QuickCommands/: index.md
docs/GettingStarted/Multi-VehicleAVPSimulation/: index.md
docs/GettingStarted/SoftwareInstallation/: index.md
docs/GettingStarted/SoftwareSetup/: index.md
docs/GettingStarted/SystemArchitecture/: index.md
docs/Scalability/Benchmarks/: index.md
docs/Scalability/ScalingToMoreVehicles/: index.md
multi_vehicle_avp/src/avp_managers/: package.xml  setup.cfg  setup.py
multi_vehicle_avp/src/avp_managers/avp_managers/: drop_off_zone_queue_manager.py  parking_spot_reservation_manager.py  vehicle_count_manager.py  vehicle_status_manager.py
multi_vehicle_avp/src/avp_managers/launch/: avp_managers_launch.py
multi_vehicle_avp/src/avp_node/: README.md  package.xml  setup.cfg  setup.py
multi_vehicle_avp/src/avp_node/avp_node/: avp_node.py  main_node.py
multi_vehicle_avp/src/avp_node/launch/: multi_avp_launch.py
multi_vehicle_avp/src/utils/: package.xml  setup.py
multi_vehicle_avp/src/utils/utils/: dropoff_and_parking.py  ros.py  ros_helpers.py
multi_vehicle_avp/src/utils/utils/tools/: generate_parking_spot_locations.py
multi_vehicle_avp/src/vehicle/: package.xml  setup.py
multi_vehicle_avp/src/vehicle/vehicle/: command_listener.py  controller.py  state_subscribers.py
unity_parking_spot_detection/: Detection.cs  JsonHelper.cs  ParkingSpot.cs  ParkingSpotPublisher.cs  YoloIntegration.cs
yolo_detection_server/: README.md  requirements.txt  yolo_server.py
(+7 files in other folders)
